need to fix nowrap

--- a/My_Grid_Flex_Notes/stylesheet.css
+++ b/My_Grid_Flex_Notes/stylesheet.css
@@ -30,3 +30,11 @@
   flex-direction: column-reverse;
   height: 100%;
 }
+
+/* flex-wrap nowrap */
+.flex-direction-column {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  height: 100%;
+}
